CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.0
 Features
  iosp
   * complete HDF5 access
   * parsing of HFD5-EOS metadata to identify dimensions.
   * netcdf-4
  geoloc
   * Add RotatedPole projection
  NcML
   * Tiled aggregation
   * Existing accepts timeUnitsChange
   * Union accepts scan
  UI
   * XMLStore aborts rather than store bad preferences XML
 Data Model
  * Strings are Unicode. In Netcdf3/4, stored as UTF-8 encoded.
  * Allow Object names to be anything (experiment).
 API
  * Extensive API changes. Most, but not completely backwards-compatible.
  * ucar.ma2.Range, ucar.ma2.Section 
  * Array local iterator: hasNext() next() methods.
  * Writer replaces OutputStream. Default is UTF-8.
  * NetcdfFile.writeCDL(PrintWriter). strict escapes names.
 Libraries
  * use new visad library 12/04/07

 Changes in version 2.2.22
 API
  * make Indexer, RegularIndexer public so can be used by IOSP
 Bugs
  * LambertAzimuthal was incorrectly requiring standard_parallel parameter
  * CF: look for axis=Z attrinute, make first in CoordSysBuilder list
  * Transverse Mercator accepts false_easting, false_northing
  * WRFConventions: makeZCoordAxis: SHORT should be DOUBLE
  * UnidataStationObsDataset : use timeObs if no timeNominal
  * UnidataStationObsDataset : check that obs links point to station
  * AWIPS, WRF Stereographic projection needs abs() in scale calculation (thanks to R. Schmunk)
  * OceanS case when a = 0.
  * opendap DConnect2 : escape query strings
  * CoordSysBuilder was putting non-CoordinateAxis into axis list, getting a ClassCast Error
  * If adding recordStructure, add to N3headers uvars list, so gets updated on a syncExtend.
  * quote special XML chars correctly in NcML
  * add "file:" prefix to reletive URLs when writing NcML location
 Library
  * httpClient 3.1
  * opendap 2.1 fix for struct.member
  * use grib 6.0 for fix of mixed table use

Changes in version 2.2.21
 Features