@@ -113,7 +113,7 @@ public class TestMotherlodeModels implements CatalogCrawler.Listener {
   public static JPanel main;
   public static void main(String args[]) throws IOException {
     //String server = "http://thredds.cise-nsf.gov:8080/thredds/";
-    String server = "http://motherlode.ucar.edu:8080/thredds";
+    String server = "http://motherlode.ucar.edu:9080/thredds";
     //String server = "http://lead1.unidata.ucar.edu:8080/thredds";
     String catalog = "/idd/models.xml";
     String catalog2 = "/idd/rtmodel.xml";
